# GridQstarter

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  README_MULTI_OBJECTIVE.md  TECHNICAL_REVIEW.md  docker-compose.yml  multi_objective_bess.py  pyproject.toml
.github/workflows/: ci.yml
examples/bundles/demand_charge_peak_shave/: run_config.yaml  site_config.yaml  timeseries.parquet
examples/bundles/negative_prices_edge/: run_config.yaml  site_config.yaml  timeseries.parquet
examples/bundles/pv_battery_tou/: bundle_metadata.json  run_config.yaml  site_config.yaml  timeseries.parquet
scripts/: generate_example_bundles.py
src/gridq_engine/: __init__.py  cli.py
src/gridq_engine/core/: __init__.py  baseline.py  constants.py  metrics.py  schemas.py  validate.py
src/gridq_engine/forecast/: __init__.py  interface.py  providers.py
src/gridq_engine/io/: __init__.py  bundle.py  formats.py
src/gridq_engine/model/: __init__.py  build.py  constraints.py  objective.py  solve.py
src/gridq_engine/runners/: __init__.py  backtest.py  live_stub.py  underwrite.py
tests/: test_energy_balance.py  test_golden_bundles.py  test_sign_conventions.py  test_soc_bounds.py
